--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 section#inicio {
-  background-image: url("./img/bannerPortifolio.png");
+  background-image: url("./img/setup1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
